---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C001 [*] module uses implicit typing
 --> ./resources/test/fixtures/correctness/C001.f90:1:1
  |
1 | module my_module
  | ^^^^^^^^^^^^^^^^
2 |   parameter(N = 1)
3 | end module my_module
  |
help: Insert `implicit none`
1 | module my_module
2 +   implicit none
3 |   parameter(N = 1)
4 | end module my_module
5 |
note: This is an unsafe fix and may change runtime behavior

C001 [*] module uses implicit typing
 --> ./resources/test/fixtures/correctness/C001.f90:5:1
  |
3 | end module my_module
4 |
5 | module safe_fix
  | ^^^^^^^^^^^^^^^
6 |   use, intrinsic :: iso_fortran_env, only: int32
7 |   integer(int32) :: foo
  |
help: Insert `implicit none`
4  |
5  | module safe_fix
6  |   use, intrinsic :: iso_fortran_env, only: int32
7  +   implicit none
8  |   integer(int32) :: foo
9  | contains
10 |   integer function double(x)
note: This is an unsafe fix and may change runtime behavior

C001 [*] program uses implicit typing
  --> ./resources/test/fixtures/correctness/C001.f90:15:1
   |
13 | end module safe_fix
14 |
15 | program my_program
   | ^^^^^^^^^^^^^^^^^^
16 |   use, intrinsic :: iso_fortran_env, only: int32
17 |   ! Fix should be applied after next line
   |
help: Insert `implicit none`
16 |   use, intrinsic :: iso_fortran_env, only: int32
17 |   ! Fix should be applied after next line
18 |   use safe_fix
19 +   implicit none
20 |   ! Fix should be applied before this line
21 |   write(*,*) 42
22 | end program my_program
note: This is an unsafe fix and may change runtime behavior

C001 [*] subroutine uses implicit typing
  --> ./resources/test/fixtures/correctness/C001.f90:23:1
   |
21 | end program my_program
22 |
23 | subroutine external_sub(x)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |   print*, x
25 | end subroutine external_sub
   |
help: Insert `implicit none`
21 | end program my_program
22 |
23 | subroutine external_sub(x)
24 +   implicit none
25 |   print*, x
26 | end subroutine external_sub
27 |
note: This is an unsafe fix and may change runtime behavior

C001 [*] module uses implicit typing
  --> ./resources/test/fixtures/correctness/C001.f90:27:1
   |
25 | end subroutine external_sub
26 |
27 | module my_module_external
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
28 |   implicit none (external)
29 |   parameter(N = 1)
   |
help: Change to `implicit none (type, external)`
25 | end subroutine external_sub
26 |
27 | module my_module_external
   -   implicit none (external)
28 +   implicit none (type, external)
29 |   parameter(N = 1)
30 | end module my_module_external
31 |
note: This is an unsafe fix and may change runtime behavior

C001 [*] function uses implicit typing
  --> ./resources/test/fixtures/correctness/C001.f90:32:1
   |
30 | end module my_module_external
31 |
32 | real function external_func() result(x)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
33 |   implicit real (a-z)
34 |   x = 3.14
   |
help: Change to `implicit none`
30 | end module my_module_external
31 |
32 | real function external_func() result(x)
   -   implicit real (a-z)
33 +   implicit none
34 |   x = 3.14
35 | end function external_func
note: This is an unsafe fix and may change runtime behavior
